create branch master

--- a/angular.json
+++ b/angular.json
@@ -92,10 +92,14 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "69c3b944-1188-4c48-9ce5-6251c2418455"
   }
 }
